# rssfeed

./: aaa.py  article_parser_1.py  cbs.py  check.py  check_1.py  custom_parser.py  edpy.py  feed_finder.py  feed_updater.py  lang.py  news_module.py  news_module_10.py  news_module_11.py  news_module_13.py  news_module_14.py  news_module_16.py  news_module_24.py  news_module_29.py  news_module_3.py  news_module_30.py  news_module_31.py  news_module_35.py  news_module_36.py  news_module_38.py  news_module_4.py  news_module_44.py  news_module_47.py  news_module_48.py  news_module_5.py  news_module_50.py  news_module_51.py  news_module_52.py  news_module_6.py  news_module_9.py  parser_1.py  parser_2.py  parsers_test.py  player-1.html  player-2.html  requirements.txt  (+7 more)
app/: main.py  pyproject.toml  settings.py
app/api/: rss.py
app/core/: feed.py  feed_finder.py  feed_finder_1.py  feed_finder_2.py  feed_parser-1.py  feed_parser.py  feed_parser_1.py  feed_parser_2.py  feed_parser_3.py  feed_parser_4.py  feed_parser_5.py  feed_parser_6.py  feed_parser_7.py  feed_parser_8.py  feed_type.py  feed_yt_parser_1.py  news_parser.py  youtube_parser.py
app/core/yt_rss_finder/: .env  test.py  yt_module.py  (+18 more)
app/crud/: feed_news.py  feed_urls.py  youtube.py  youtube_feed.py
app/database/: mongo_db.py
app/models/: article_models.py
app/routers/: web.py
app/schemas/: feed_news.py  feed_urls.py  youtube_feed.py
app/services/: article_service.py  feed_service.py  scheduler.py
app/templates/: base.html  feed_detail.html  feed_items.html  index.html  list_feeds.html
(+151 files in other folders)
