# pyproject.toml
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "rssfastapi"
version = "0.1.0"
description = "RSS Aggregator with FastAPI and MongoDB"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "motor>=2.5.0",
    "feedparser>=6.0.8",
    "beautifulsoup4>=4.9.0",
    "aiohttp>=3.7.0",
    "pydantic>=1.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-asyncio>=0.15.0",
    "httpx>=0.18.0",
    "mongomock-motor>=0.0.18",
    "pytest-cov>=2.0.0"
]

[tool.setuptools]
packages = ["app"]